--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/three": "^0.161.2",
     "framer-motion": "^11.0.6",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "three": "^0.161.0",
     "tone": "^15.0.4",
