--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nextui-org/button": "^2.0.38",
     "@nextui-org/react": "^2.4.8",
+    "@nextui-org/slider": "^2.0.38",
     "@react-spring/web": "^9.7.4",
     "@react-three/drei": "^9.112.0",
     "@react-three/fiber": "^8.17.7",
